k8s/backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: food-app-backend-svc
spec:
  type: ClusterIP
  selector:
    app: backend
  ports:
    - name: http
      port: 8080
