k8s/backend/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
  namespace: food-app
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
  - host: food.home
    http:
      paths:
      - path: /api/.*
        pathType: Prefix
        backend:
          service:
            name: food-app-backend-svc
            port: 
              number: 80
